# JuntosSomosMaisApi

./: .env  .gitignore  Dockerfile  Makefile  README.md  compose.development.yml  compose.yml  pyproject.toml
.docs/: JuntosSomosMais-Localhost.postman_environment.json  JuntosSomosMaisApi.postman_collection.json
.github/workflows/: on-push-tags.yml  on-push.yml
.k8s/production/: deployment.yml  kustomization.yml  secrets.yml  service.yml
.k8s/production/secrets/: .secrets.yml  deployment.yml  service.yml
.k8s/staging/: deployment.yml  secrets.yml  service.yml
.k8s/staging/secrets/: .secrets.yml  kustomization.yml
.monitoring/grafana/: prometheus-datasource.yml
.monitoring/grafana/dashboards/: dashboard.yml
.monitoring/grafana/dashboards/juntos-somos-mais/: metrics.json
.monitoring/prometheus/: alerts.yml  prometheus.yml
api/: main.py
api/confs/: settings.py
api/exceptions/: exception_handler.py
api/exceptions/errors/: api_base_exception.py  http_exception.py  internal_server_error.py  not_found_error.py  unauthorized_token_error.py
api/exceptions/throws/: http_exception.py  internal_server_error.py  not_found.py  not_found_error.py  request_validation_error.py  unauthorized_token_error.py
api/modules/states/v1/: repository.py
api/modules/users/v1/: controller.py  repository.py  (+1 more)
api/routers/: __init__.py  router.py
api/shared_resources/: repository.py  storage.py
api/shared_resources/dtos/: classification.py  pagination.py
api/shared_resources/entities/: paginated.py
api/shared_resources/enums/: classification_direction.py
api/utils/: authorization.py  format_data.py
tests/unit/exceptions/: exception_handler.py
tests/unit/shared_resources/: storage.py
tests/unit/utils/: authorization.py  format_data.py
(+12 files in other folders)
